--- a/Desafios/d012/style.css
+++ b/Desafios/d012/style.css
@@ -4,6 +4,11 @@
     margin: 0px;
     padding: 0px;
 }
+
+html , body {
+    min-height: 100vh;
+    background-color: darkgray;
+}
 header {
     background-color: black;
     color: white;
