--- a/Desafios/d012/style.css
+++ b/Desafios/d012/style.css
@@ -67,12 +67,25 @@ section.normal {
 section.imagem {
     background-color: rgb(58, 57, 57);
     color: white;
+    box-shadow: inset 6px 6px 13px black;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.222);
     display: inline-block;
     padding: 6px;
+    text-shadow: 1px 1px 0px black;
+}
+
+section#imagem01{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#imagem02 {
+    background-image: url(imagens/background002.jpg);
 }
 footer {
     background-color: black;
