--- a/Desafios/mp01/style.css
+++ b/Desafios/mp01/style.css
@@ -26,3 +26,22 @@ header > h1 {
 header {
     padding-bottom: 50px;
 }
+header a , footer a {
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+header a:hover ,  footer a:hover {
+    text-decoration: underline;
+}
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 1.9em;
+    padding-left: 30px;
+    font-size: 3.7vh;
+}
+section.normal {
+    background-color: white;
+}
