--- a/Desafios/mp01/style.css
+++ b/Desafios/mp01/style.css
@@ -50,4 +50,10 @@ section.normal {
 section.imagem {
     background-color: #1D2173;
     color: white;
+    box-shadow: inset 6px 6px 8px rgba(0, 0, 0, 0.247);
+    background-size: cover;
+}
+
+section.imagem > p {
+    background-color: rgba(0, 0, 0, 0.362);
 }
