--- a/Desafios/mp01/style.css
+++ b/Desafios/mp01/style.css
@@ -1,5 +1,14 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
+:root{
+    --font01: Verdada , "Press Start 2P" , system-ui;
+    --font02: "VT323", monospace; 
+}
+
 
 * {
     margin: 0px;
@@ -16,16 +25,21 @@ header {
     background-color: #070A40;
     color: white;
     text-align: center;
+   font-size: 1em;
 }
 
 header > h1 {
     padding-top: 50px;
-    font-size: 10vh;
+    font-size: 6vh;
+    font-variant:small-caps;
+    font-family: var(--font01);
+    font-style: normal;
+    
 }
-
-header {
+header > p {
     padding-bottom: 50px;
 }
+
 header a , footer a {
     color: white;
     text-decoration: none;
@@ -36,11 +50,12 @@ header a:hover ,  footer a:hover {
     text-decoration: underline;
 }
 section {
-    padding-top: 15vh;
-    padding-bottom: 15vh;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
     line-height: 1.9em;
     padding-left: 10px;
     font-size: 3.7vh;
+    font-family: var(--font02);
 }
 section.normal {
     background-color: white;
@@ -79,5 +94,5 @@ footer {
     background-color: black;
     color: white;
     text-align: center;
-    font-size: 4vh;
+    font-size: 3vh;
 }
