--- a/Desafios/mp02/style.css
+++ b/Desafios/mp02/style.css
@@ -9,10 +9,11 @@
 html,body {
     min-height: 100vh;
     background-color: #89D99D;
+    font-size: 1em;
 }
 
 header {
-    background-color: #122140;
+    background-color: #35648C;
     color: white;
     text-align: center;
     font-size: 1em;
@@ -30,4 +31,51 @@ header a , footer a {
     text-decoration: none;
     font-weight: bolder;
 
+}
+header a:hover , footer a:hover {
+    text-decoration: underline;
+}
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 15px;
+    line-height: 1.9em;
+}
+
+section.normal {
+    color: black;
+    background-color: white;
+    padding-left: 15px;
+}
+
+section.imagem {
+    background-color: #55D95D;
+    color: white;
+    box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.579);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section.imagem > p {
+    background-color: rgba(0, 0, 0, 0.425);
+    padding: 6px;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.403);
+    display: inline block;
+    width:40vh;
+    border-radius: 1px;
+}
+
+section#imagem01 {
+    background-image: url(imagens/imagem01.avif);
+    background-position: center center;
+}
+section#imagem02 {
+    background-image: url(imagens/imagem002.avif);
+    background-position: center center;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
 }
