--- a/exercicios/ex026/mq004/estilos/media-query.css
+++ b/exercicios/ex026/mq004/estilos/media-query.css
@@ -12,10 +12,29 @@ Grandes telas: acima de 1200px*/
 
 @media print {
     /*IMPRESSÃo */
-    body {
-        background-image: url(../imagens/back-print.jpg);
+    * {
         font-family: 'Courier New', Courier, monospace;
     }
+    body {
+        background-image: url(../imagens/back-print.jpg); /*Desnecesário*/
+        text-shadow: none;
+        color: black;
+    }
+    
+    main {
+        border: 2px solid black;
+    }
+    main > h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    
+    img#phone { display: none;}
+    img#tablet {display: none;}
+    img#print { display: block;}
+    img#pc {display: none;}
+    img#tv {display: none;}
 }
 
 @media screen and (min-width: 768px) and (max-width:992px) {
